<resources>
    <string name="app_name">Sem08</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="et_correo">Correo</string>
    <string name="et_clave">Clave</string>
    <string name="noLogin">Credenciales invalidos</string>
    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="NombreLugar">Nombre del Lugar</string>
    <string name="CorreoLugar">Email</string>
    <string name="TelefonoLugar">Telefono(9999-9999)</string>
    <string name="WebLugar">Web</string>
    <string name="btAddLugar">Agregar Lugar</string>
    <string name="ms_AddLugar">Lugar Agregado</string>
    <string name="ms_FaltanValores">Faltan valores</string>
    <string name="ms_UpdateLugar">Lugar actualizado</string>
    <string name="ms_DeleteLugar">Lugar eliminado</string>
    <string name="ms_FalloDelete">Fallo al eliminar</string>
    <string name="btUpdateLugar">Actualizar Lugar</string>
    <string name="btDeleteLugar">Eliminar Lugar</string>
    <string name="msgInicioNotaAudio">MsgInicioNotaAudio</string>
    <string name="msgDetieneNotaAudio">MsgFinNotaAudio</string>
    <string name="msgSubiendo">Subiendose</string>
    <string name="todo">Todo</string>
    <string name="msg_imagen">Imagen</string>
    <string name="msgEscucharAudio">msg escuchar audio</string>


</resources>